# FirstCompiler

./: CFG.cpp  CFG.h  CMakeLists.txt  CodeGen.cpp  CodeGen.h  Global.cpp  IR.cpp  IR.h  IntraBlock.cpp  Naive.cpp  README.md  Strategy.h  phase2.cpp
test/: 42.global.s  42.intra.s  42.ir  42.naive.s  42.sh  42.tiger  42_f.ir  42_f.naive.s  42_f.out  42_f.sh  array_store.ir  array_store.tiger  call.global.s  call.intra.s  call.ir  call.naive.s  call.out  call.sh  condition.global.s  condition.intra.s  condition.ir  condition.naive.s  condition.out  condition.sh  factorial.ebb.s  factorial.global.s  factorial.intra.s  factorial.lbb.s  factorial.n.s  factorial.naive.s  factorial.out  factorial.sh  simple_array_store.ir  test1.ir  test1.tiger
